fixed navbar-collapse on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,11 @@ body {}
 
 .navbar {
     padding: 0;
+    text-align: center;
+}
+
+.navbar-collapse {
+    background-color: #CEEAFF
 }
 
 .nav-item {
